--- a/_columns/Stock_Of_the_Day/zh-cn/2024-12-11.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-12-11.md
@@ -18,23 +18,28 @@ author: RYAN DEFFENBAUGH
 
 
 
-Founded in 1990, Atlanta-based Manhattan Associates develops software tools for supply chains, including warehouse management. The stock has gained roughly 40% this year, outpacing a 27% gain for the S&P 500. That's after shares jumped by 77% in 2023, helped by momentum in the company's shift to [subscription-based software sales.](https://www.investors.com/research/ibd-stock-of-the-day/manh-stock-why-manhattan-associates-is-guarded-on-generative-ai/)   
+Founded in 1990, Atlanta-based Manhattan Associates develops software tools for supply chains, including warehouse management. The stock has gained roughly 40% this year, outpacing a 27% gain for the S&P 500. That's after shares jumped by 77% in 2023, helped by momentum in the company's shift to [subscription-based software sales.](https://www.investors.com/research/ibd-stock-of-the-day/manh-stock-why-manhattan-associates-is-guarded-on-generative-ai/)   
+总部位于亚特兰大的 Manhattan Associates 成立于 1990 年，为供应链开发软件工具，包括仓库管理。该股今年上涨了约 40%，超过了标准普尔 500 指数 27% 的涨幅。此前，该公司股价在 2023 年上涨了 77%，这得益于该公司转向[基于订阅的软件销售](https://www.investors.com/research/ibd-stock-of-the-day/manh-stock-why-manhattan-associates-is-guarded-on-generative-ai/)的势头。
 
 
-On the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/?), Manhattan Associates stock rose 1% to close at 300.67.  Shares are breaking a four-day downtrend to approach a 306.63 handle buy point.  
+On the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/?), Manhattan Associates stock rose 1% to close at 300.67.  Shares are breaking a four-day downtrend to approach a 306.63 handle buy point.  
+[今日](https://www.investors.com/news/stock-market-today-stock-market-news/?)股市上，曼哈顿公司股价上涨 1%，收于 300.67 点。 股价打破了连续四天的下跌趋势，接近 306.63 手柄买入点。
 
 
-Enterprise technology firms have rallied in recent weeks after strong earnings reports from a list of companies that includes [**Salesforce**](https://www.investors.com/news/technology/salesforce-stock-salesforce-earnings-news-q32024/) ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and [**Snowflake**](https://www.investors.com/news/technology/snowflake-stock-snowflake-earnings-q32024/) ([SNOW](https://research.investors.com/quote.aspx?symbol=SNOW)). The iShares Expanded Tech-Software ETF ([IGV](https://research.investors.com/quote.aspx?symbol=IGV)), which holds shares of more than 100 enterprise software players, jumped 15% in November, its best monthly gain since November 2023. IGV is ahead 3% so far this month.  
+Enterprise technology firms have rallied in recent weeks after strong earnings reports from a list of companies that includes [**Salesforce**](https://www.investors.com/news/technology/salesforce-stock-salesforce-earnings-news-q32024/) ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and [**Snowflake**](https://www.investors.com/news/technology/snowflake-stock-snowflake-earnings-q32024/) ([SNOW](https://research.investors.com/quote.aspx?symbol=SNOW)). The iShares Expanded Tech-Software ETF ([IGV](https://research.investors.com/quote.aspx?symbol=IGV)), which holds shares of more than 100 enterprise software players, jumped 15% in November, its best monthly gain since November 2023. IGV is ahead 3% so far this month.  
+最近几周，在包括 [**Salesforce**](https://www.investors.com/news/technology/salesforce-stock-salesforce-earnings-news-q32024/) （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 和 [**Snowflake**](https://www.investors.com/news/technology/snowflake-stock-snowflake-earnings-q32024/) （[SNOW）](https://research.investors.com/quote.aspx?symbol=SNOW) 在内的一系列公司公布强劲的收益后，企业技术公司上涨。持有 100 多家企业软件公司股票的 iShares Expanded Tech-Software ETF （[IGV](https://research.investors.com/quote.aspx?symbol=IGV)） 在 11 月上涨了 15%，这是自 2023 年 11 月以来的最佳月度涨幅。本月到目前为止，IGV 上涨了 3%。
 
 
-Manhattan Associates Stock Bouncing Back
-----------------------------------------
+Manhattan Associates Stock Bouncing BackManhattan Associates 股票反弹
+-----------------------------------------------------------------
 
 
-Manhattan Associates, meanwhile, is still working back to highs reached in mid-October. The stock tumbled 7% the day after the company reported third-quarter earnings on Oct. 22.  
+Manhattan Associates, meanwhile, is still working back to highs reached in mid-October. The stock tumbled 7% the day after the company reported third-quarter earnings on Oct. 22.  
+与此同时，Manhattan Associates（曼哈特公司）仍在努力恢复到 10 月中旬达到的高点。在该公司于 10 月 22 日公布第三季度收益后的第二天，该股下跌了 7%。
 
 
-Adjusted earnings per share increased 29% year-over-year for the September-ended quarter, while sales rose 12% to $266.7 million. Both top- and bottom-line metrics exceeded consensus expectations, but analysts noted the company's guidance prompted some investor concern.  
+Adjusted earnings per share increased 29% year-over-year for the September-ended quarter, while sales rose 12% to $266.7 million. Both top- and bottom-line metrics exceeded consensus expectations, but analysts noted the company's guidance prompted some investor concern.  
+截至 9 月止季度，调整后每股收益同比增长 29%，销售额增长 12%，达到 2.667 亿美元。营收和利润指标均超出市场预期，但分析师指出，该公司的指引引发了一些投资者的担忧。
 
 
 "We believe guidance is conservative, (the company's) beat and raise dynamics intact and are incrementally confident in sustained strong cloud, earnings and free-cash-flow compounding growth," wrote Truist Securities analyst Terry Tillman in an Oct. 22 client note. "Based on the lower revenue outlook for fiscal year 2025 and after-hours action, we expect shares to trade off tomorrow and would recommend buying on weakness."  
